--- a/netlify.toml
+++ b/netlify.toml
@@ -3,4 +3,7 @@
   publish = "dist"
 
 [functions]
+  node_bundler = "esbuild"
+  included_files = []
+  external_node_modules = []
   directory = "netlify/functions"
